Fixed mobile horizontal scroller

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -27,10 +27,6 @@ div#main {
   width: 100%;
 }
 
-div#logo img {
-  padding-right: 100px;
-}
-
 img {
   max-width: 100%;
 }
